# signalrag

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/commands/: signalrag.md
scripts/: build_index.py
signalrag/: __init__.py  cli.py  config.py  export.py
signalrag/db/: __init__.py  connection.py  key.py  models.py  queries.py
signalrag/embeddings/: __init__.py  chunker.py  embedder.py  indexer.py  store.py
signalrag/graph/: __init__.py  analysis.py  builder.py
signalrag/rag/: __init__.py  engine.py  prompt.py  retriever.py
tests/: conftest.py  test_00_key_extraction.py  test_01_db_access.py  test_02_embeddings.py  test_03_vectorstore.py  test_04_integration.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
